--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "request-mod",
+  "description": "Browser extension for modifying HTTP headers",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
