--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,10 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
-  "include": [
-    "vite.config.ts",
-    "manifest.json"
-  ]
+  "include": ["vite.config.ts", "./src/extension/manifest.ts", "package.json"]
 }
