--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cdbreact": "^1.5.18",
-    "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
+    "flowbite": "^2.1.1",
+    "flowbite-react": "^0.6.4",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^1.0.14",
     "@types/chrome": "^0.0.248",
     "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.15",
@@ -28,10 +28,13 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
