--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "clsx": "^2.0.0",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
