--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "lodash": "^4.17.21",
+    "postcss-import": "^16.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.18.0"
