--- a/package.json
+++ b/package.json
@@ -12,34 +12,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "clsx": "^2.0.0",
-    "firebase": "^10.12.0",
-    "flowbite": "^2.1.1",
-    "flowbite-react": "^0.6.4",
-    "lodash": "^4.17.21",
-    "postcss-import": "^16.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.18.0"
+    "clsx": "2.1.1",
+    "firebase": "10.13.1",
+    "flowbite": "2.5.1",
+    "flowbite-react": "0.10.1",
+    "lodash": "4.17.21",
+    "postcss-import": "16.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.26.2"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^1.0.14",
-    "@types/chrome": "^0.0.248",
-    "@types/lodash": "^4.14.200",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.0.2",
-    "vite": "^5.2.11"
+    "@crxjs/vite-plugin": "1.0.14",
+    "@types/chrome": "0.0.271",
+    "@types/lodash": "4.17.7",
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.7",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.6.0",
+    "@typescript-eslint/parser": "8.6.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.10.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.12",
+    "postcss": "8.4.47",
+    "prettier": "3.3.3",
+    "tailwindcss": "3.4.12",
+    "typescript": "5.6.2",
+    "vite": "5.4.6"
   }
 }
